# fcitx-littlesun

./: CMakeLists.txt  README  config.h.in
data/: CMakeLists.txt
po/: CMakeLists.txt
src/: CMakeLists.txt  bus.cpp  bus.h  common.h  config.cpp  eim.cpp  eim.h  fcitx-libpinyin.conf.in  fcitx-littlesun.conf.in  fcitx-littlesun.desc  keyboardInterface.cpp  keyboardInterface.h  keyboardbus.cpp  keyboardbus.h  littlesun.conf.in  pinyin-libpinyin.conf.in  utils.cpp  utils.h
